fix: z-index carousel btn

--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -19,7 +19,7 @@
   top: 42%;
   border: 1px solid #e5e5e5;
   border-radius: 4px;
-  z-index: 9999999;
+  z-index: 9999;
 
   background-color: #f9f9f9;
 }
